swath-k8s-for-argocd/deployment.yaml
# Deployment of the latest version
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: swath
  name: swath
  namespace: swath
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swath
  template:
    metadata:
      labels:
        app: swath
    spec:
      containers:
      - image: northamerica-northeast2-docker.pkg.dev/agile-tangent-401105/container-registry/swath:latest
        name: swath

---

# Deployment for version 0.2.0
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: swathzerotwozero
  name: swathzerotwozero
  namespace: swath
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swathzerotwozero
  template:
    metadata:
      labels:
        app: swathzerotwozero
    spec:
      containers:
      - image: northamerica-northeast2-docker.pkg.dev/agile-tangent-401105/container-registry/swath:0.2.0
        name: swathzerotwozero

---

# Deployment for version 0.1.5
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: swath015
  name: swath015
  namespace: swath
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swath015
  template:
    metadata:
      labels:
        app: swath015
    spec:
      containers:
      - image: northamerica-northeast2-docker.pkg.dev/agile-tangent-401105/container-registry/swath:0.1.5
        name: swath015
