swath-k8s-for-argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swath-lb
  namespace: swath
spec:
  type: NodePort
  selector:
    app: swath
  ports:
    - name: 80-9009 
      protocol: TCP
      port: 80
      targetPort: 9009
  selector:
    app: swath

---

apiVersion: v1
kind: Service
metadata:
  name: swath-lb-zerotwozero
  namespace: swath
spec:
  type: NodePort
  selector:
    app: swathzerotwozero
  ports:
    - name: 80-9009 
      protocol: TCP
      port: 80
      targetPort: 9009
  selector:
    app: swathzerotwozero


---

apiVersion: v1
kind: Service
metadata:
  name: swath-lb-015
  namespace: swath
spec:
  type: NodePort
  selector:
    app: swath015
  ports:
    - name: 80-9009 
      protocol: TCP
      port: 80
      targetPort: 9009
  selector:
    app: swath015
