swath-k8s-for-argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: swath
  namespace: swath
  name: swath-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "static-ip-swath"
    networking.gke.io/managed-certificates: managed-certificate
    networking.gke.io/v1beta1.FrontendConfig: redirect-http
spec:
  rules:
  - host: swath.gule-gulzar.com
    http:
      paths:
      - path: "/"
        backend:
          service:
            name: swath-lb
            port:
              number: 80
        pathType: Prefix
